fix: импортированы исправленные стили

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -6,7 +6,7 @@
 	height: 40px;
 	border: none;
     background: none;
-	background-image: url(./images/Close\ Icon.png);
+	background-image: url(../../../images/Close\ Icon.png);
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
