--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -3,7 +3,7 @@
     padding-right: 20px;
     width: 22px;
     height: 19px;
-    background-image: url(./images/icon-heart.svg);
+    background-image: url(../../../images/icon-heart.svg);
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
@@ -14,6 +14,6 @@
 }
 
 .element__like:active {
-    background-image: url(./images/icon-heart-black.png);
+    background-image: url(../../../images/icon-heart-black.png);
     opacity: 1;
 }
