--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
     border: 1px solid #fff;
     background-color: #000;
-    background-image: url(./images/edit-button.png);
+    background-image: url(../../../images/edit-button.png);
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
