--- a/pages/index.css
+++ b/pages/index.css
@@ -10,7 +10,7 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__prof/profile__prof.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
-@import url(../blocks/profile/__add-button/);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__photo/element__photo.css);
