--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,6 +7,13 @@
     margin: 0 auto;
     padding-top: 45px;
     padding-bottom: 41px;
-    border-bottom: 1px solid #545454;
-    opacity: 0.7;
+    border-bottom: 1px solid rgba(84, 84, 84, .7);
+}
+
+@media screen and (max-width: 900px) {
+    .header {
+        max-height: 56px;
+        padding-top: 28px;
+        padding-bottom: 32px;
+    }
 }
