--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,14 +1,15 @@
 .popup__close-button {
     position: absolute;
-	top: -45px;
+    top: -45px;
     right: -45px;
-	width: 40px;
-	height: 40px;
-	border: none;
+    width: 40px;
+    height: 40px;
+    border: none;
     background: none;
-	background-image: url(../../../images/Close\ Icon.png);
+    background-image: url(../../../images/close-button.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition: .3s;
     cursor: pointer;
 }
 
@@ -16,11 +17,11 @@
     opacity: .6;
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 767px) {
     .popup__close-button {
         top: -35px;
         right: 5px;
-	    width: 20px;
-	    height: 20px;
+        width: 20px;
+        height: 20px;
     }
 }
