--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,9 +7,10 @@
     box-sizing: border-box;
     border: 1px solid #fff;
     background-color: #000;
-    background-image: url(../../../images/edit-button.png);
+    background-image: url(../../../images/edit-button.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition: .3s;
     cursor: pointer;
 }
   
