--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,7 @@
 .popup__input {
+	margin: 0 0 30px 36px;
+	padding: 0;
+	padding-bottom: 13px;
 	box-sizing: border-box;
 	border: none;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -11,13 +14,21 @@
 	cursor: text;
 }
 
+.popup__input:last-of-type {
+	margin-bottom: 48px;
+}
+
 .popup__input:focus {
 	opacity: 1;
 }
 
 @media screen and (max-width: 767px) {
 	.popup__input {
-		margin: 75px auto 0;
+		margin: 0 0 30px 22px;
 		max-width: 238px;
+	}
+
+	.popup__input:last-of-type {
+		margin-bottom: 45px;
 	}
 }
