--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,7 +1,10 @@
 .popup {
 	font-family: 'Inter', Arial, Helvetica, sans-serif;
 	background: rgba(0, 0, 0, 0.5);
-	display: none;
+	display: flex;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0.2s, opacity 0.2s linear;
 	justify-content: center;
 	align-items: center;
 	position: fixed;
