--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,4 +1,4 @@
 .element__like_active {
-    background-image: url(../../../images/activ-like-button.svg);
+    background-image: url(../../../../images/Union.svg);
     opacity: 1;
 }
