fix: внесены исправления по ревью

--- a/blocks/element/__photo/element__photo.css
+++ b/blocks/element/__photo/element__photo.css
@@ -5,3 +5,8 @@
     object-position: top;
     border-radius: 10px 10px 0 0;
 }
+
+.element__photo:hover {
+    transition: .3s;
+    opacity: .6;
+}
