--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
     margin: 0 auto;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
