--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,7 @@
 @import url(../blocks/popup/__save-batton/popup__save-button.css);
 @import url(../blocks/popup/__photo/popup__photo.css);
 @import url(../blocks/popup/__photo-caption/popup__photo-caption.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_activ/popup__input-error_activ.css);
+@import url(../blocks/popup/__save-batton/_inactive/popup__save-button_inactive.css);
