--- a/blocks/popup/__save-batton/popup__save-button.css
+++ b/blocks/popup/__save-batton/popup__save-button.css
@@ -25,6 +25,7 @@
     border: 1px solid #000;
     color: #000;
     opacity: .2;
+    cursor: default;
 }
 
 @media screen and (max-width: 767px) {
