fix: 9ПР:подключение к серверу, редактирование профиля и показ лайков

--- a/src/blocks/popup/__input-error/_activ/popup__input-error_activ.css
+++ b/src/blocks/popup/__input-error/_activ/popup__input-error_activ.css
@@ -5,7 +5,7 @@
     left: 0;
 }
 
-.popup__input-error_activ:last-of-type {
+.popup__input-error_activ:nth-of-type(even) {
     top: 210px;
 }
 
@@ -15,7 +15,7 @@
 		left: -12px;
 	}
 
-	.popup__input-error_activ:last-of-type {
+	.popup__input-error_activ:nth-of-type(even) {
 		left: -12px;
 	}
 }
