--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,11 @@
 .profile__avatar {
+    position: relative;
     width: 120px;
     height: 120px;
+    object-fit: cover;
     border-radius: 50%;
     margin-right: 30px;
+    cursor: pointer; 
 }
 
 @media screen and (max-width: 767px) {
