--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -1,7 +1,7 @@
 .element__like {
     padding: 0;
-    margin-left: 22px;
-    margin-right: 20px;
+    
+    margin-bottom: 3px;
     max-width: 22px;
     width: 100%;
     height: 19px;
